@@ -1,4 +1,5 @@
 1.0.1 (trunk)
+* `opam config env` now detects the current shell and outputs a sensible default if no override is provided.
 * Improve `opam pin` stability and start display information about dev revisions
 * Add a new `man` field in `.install` files
 * Support hierarchical installation in `.install` files
